--- a/bone_age_predict.ipynb
+++ b/bone_age_predict.ipynb
@@ -19,6 +19,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "import tensorflow as tf\n",
+    "from sympy.polys.domains.finitefield import flint\n",
     "from tensorflow.keras.optimizers import Adam\n",
     "from tensorflow.keras.models import Sequential\n",
     "from tensorflow.keras.layers import GlobalMaxPool2D, Activation, Flatten, Dense\n",
@@ -172,12 +173,179 @@
    "execution_count": 20
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-31T16:25:51.838159Z",
+     "start_time": "2025-01-31T16:25:51.822398Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# preprocessing : train-test split, data augmentation\n",
+    "\n",
+    "df_train, df_validation = train_test_split(training_df, test_size=0.2, random_state=42, shuffle=True)\n",
+    "\n",
+    "df_val, df_test = train_test_split(df_validation, test_size=0.5, random_state=42, shuffle=True)\n"
+   ],
+   "id": "e7315de89a01c4cd",
+   "outputs": [],
+   "execution_count": 33
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-31T16:23:05.512125Z",
+     "start_time": "2025-01-31T16:23:05.486241Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# data augmentation\n",
+    "\n",
+    "data_augmentation = dict(rotation_range=180,\n",
+    "                                       zoom_range=0.2,\n",
+    "                                       brightness_range=[0.2, 0.5],\n",
+    "                                       width_shift_range=0.2,\n",
+    "                                       height_shift_range=0.2,\n",
+    "                                       shear_range=0.05,\n",
+    "                                       horizontal_flip=True,\n",
+    "                                       fill_mode='nearest')"
+   ],
+   "id": "f676f4fe42c580d5",
+   "outputs": [],
+   "execution_count": 26
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-31T16:23:07.033832Z",
+     "start_time": "2025-01-31T16:23:07.018827Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# ImageDataGenerator\n",
+    "\n",
+    "train_generator = ImageDataGenerator(rescale=1/255,\n",
+    "                                     preprocessing_function=preprocess_input, **data_augmentation)\n",
+    "test_val_generator = ImageDataGenerator(rescale=1/255, preprocessing_function=preprocess_input)"
+   ],
+   "id": "c10835301829d60b",
+   "outputs": [],
+   "execution_count": 27
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-31T16:24:21.725480Z",
+     "start_time": "2025-01-31T16:24:20.184119Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "img_size = (256,256)\n",
+    "batch_size = 128\n",
+    "\n",
+    "train_data = train_generator.flow_from_dataframe(\n",
+    "    dataframe=df_train,\n",
+    "    x_col='path',\n",
+    "    y_col='boneage',\n",
+    "    batch_size=batch_size,\n",
+    "    seed=42,\n",
+    "    shuffle=True,\n",
+    "    class_mode='other', # regression problem\n",
+    "    flip_vert=True,\n",
+    "    color_mode='rgb',\n",
+    "    target_size=img_size\n",
+    ")"
+   ],
+   "id": "b9b4b37e3284d54",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 10088 validated image filenames.\n"
+     ]
+    }
+   ],
+   "execution_count": 30
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-31T16:26:01.264966Z",
+     "start_time": "2025-01-31T16:26:01.153673Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "valid_data = test_val_generator.flow_from_dataframe(\n",
+    "    dataframe=df_val,\n",
+    "    x_col= 'path',\n",
+    "    y_col='boneage',\n",
+    "    batch_size=batch_size,\n",
+    "    seed=42,\n",
+    "    shuffle=False,\n",
+    "    class_mode='other',\n",
+    "    flip_vert=True,\n",
+    "    color_mode='rgb',\n",
+    "    target_size=img_size\n",
+    ")\n",
+    "\n",
+    "test_data = test_val_generator.flow_from_dataframe(\n",
+    "    dataframe=df_test,\n",
+    "    x_col= 'path',\n",
+    "    y_col='boneage',\n",
+    "    batch_size=batch_size,\n",
+    "    seed=42,\n",
+    "    shuffle=False,\n",
+    "    class_mode='other',\n",
+    "    flip_vert=True,\n",
+    "    color_mode='rgb',\n",
+    "    target_size=img_size\n",
+    ")"
+   ],
+   "id": "d91ffa2542cf32bc",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 1261 validated image filenames.\n",
+      "Found 1262 validated image filenames.\n"
+     ]
+    }
+   ],
+   "execution_count": 34
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "X_test , y_test = next(test_val_generator.flow_from_dataframe(\n",
+    "    dataframe=df_test,\n",
+    "    x_col= 'path',\n",
+    "    y_col='boneage',\n",
+    "    batch_size=batch_size * 10,\n",
+    "    class_mode='other',\n",
+    "    flip_vert=True,\n",
+    "    color_mode='rgb',\n",
+    "    target_size=img_size\n",
+    "    \n",
+    "))"
+   ],
+   "id": "4e2e44705b36dd35"
+  },
+  {
    "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "e7315de89a01c4cd"
+   "id": "5b2d1b3f3dc5bedb"
   }
  ],
  "metadata": {
