Transfer learning with Xception model was applied and fine-tuning was performed to complete the training

--- a/bone_age_predict.ipynb
+++ b/bone_age_predict.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "code",
    "id": "initial_id",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2025-01-31T18:08:36.342647Z",
+     "start_time": "2025-01-31T18:08:36.326896Z"
+    }
    },
    "source": [
     "# import libraries\n",
@@ -22,7 +26,7 @@
     "from sympy.polys.domains.finitefield import flint\n",
     "from tensorflow.keras.optimizers import Adam\n",
     "from tensorflow.keras.models import Sequential\n",
-    "from tensorflow.keras.layers import GlobalMaxPool2D, Activation, Flatten, Dense\n",
+    "from tensorflow.keras.layers import GlobalMaxPooling2D, Activation, Flatten, Dense\n",
     "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
     "from tensorflow.keras.applications.xception import preprocess_input\n",
     "from tensorflow.keras.callbacks import EarlyStopping, ModelCheckpoint\n",
@@ -31,10 +35,15 @@
     "warnings.filterwarnings(\"ignore\")"
    ],
    "outputs": [],
-   "execution_count": null
+   "execution_count": 2
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-31T18:08:36.405848Z",
+     "start_time": "2025-01-31T18:08:36.390135Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "# load data\n",
@@ -47,10 +56,15 @@
    ],
    "id": "d007fde5a2920a70",
    "outputs": [],
-   "execution_count": null
+   "execution_count": 3
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-31T18:08:36.470409Z",
+     "start_time": "2025-01-31T18:08:36.405848Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "training_df['path'] = (training_df['id'].map(lambda id: os.path.join\n",
@@ -58,49 +72,199 @@
     "training_df.head()"
    ],
    "id": "72212d04bd9ce5d0",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "     id  boneage   male                                               path\n",
+       "0  1377      180  False  res\\boneage-training-dataset\\boneage-training-...\n",
+       "1  1378       12  False  res\\boneage-training-dataset\\boneage-training-...\n",
+       "2  1379       94  False  res\\boneage-training-dataset\\boneage-training-...\n",
+       "3  1380      120   True  res\\boneage-training-dataset\\boneage-training-...\n",
+       "4  1381       82  False  res\\boneage-training-dataset\\boneage-training-..."
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>boneage</th>\n",
+       "      <th>male</th>\n",
+       "      <th>path</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1377</td>\n",
+       "      <td>180</td>\n",
+       "      <td>False</td>\n",
+       "      <td>res\\boneage-training-dataset\\boneage-training-...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1378</td>\n",
+       "      <td>12</td>\n",
+       "      <td>False</td>\n",
+       "      <td>res\\boneage-training-dataset\\boneage-training-...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1379</td>\n",
+       "      <td>94</td>\n",
+       "      <td>False</td>\n",
+       "      <td>res\\boneage-training-dataset\\boneage-training-...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1380</td>\n",
+       "      <td>120</td>\n",
+       "      <td>True</td>\n",
+       "      <td>res\\boneage-training-dataset\\boneage-training-...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1381</td>\n",
+       "      <td>82</td>\n",
+       "      <td>False</td>\n",
+       "      <td>res\\boneage-training-dataset\\boneage-training-...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 4
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-31T18:08:36.542965Z",
+     "start_time": "2025-01-31T18:08:36.527287Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "training_df['img_path'] = (training_df['id'].map(lambda id: f'{id}.png'))\n",
     "training_df['img_path']"
    ],
    "id": "3910d244e60cb406",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0         1377.png\n",
+       "1         1378.png\n",
+       "2         1379.png\n",
+       "3         1380.png\n",
+       "4         1381.png\n",
+       "           ...    \n",
+       "12606    15605.png\n",
+       "12607    15606.png\n",
+       "12608    15608.png\n",
+       "12609    15609.png\n",
+       "12610    15610.png\n",
+       "Name: img_path, Length: 12611, dtype: object"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 5
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-31T18:08:36.623148Z",
+     "start_time": "2025-01-31T18:08:36.607528Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "training_df['gender'] = training_df['male'].map(lambda x: 'male' if x == 1 else 'female')\n",
     "training_df['gender']"
    ],
    "id": "d8732a11454f5283",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        female\n",
+       "1        female\n",
+       "2        female\n",
+       "3          male\n",
+       "4        female\n",
+       "          ...  \n",
+       "12606    female\n",
+       "12607    female\n",
+       "12608    female\n",
+       "12609      male\n",
+       "12610      male\n",
+       "Name: gender, Length: 12611, dtype: object"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 6
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-31T18:08:36.774979Z",
+     "start_time": "2025-01-31T18:08:36.759355Z"
+    }
+   },
    "cell_type": "code",
    "source": "training_df['gender_encoded'] = training_df['gender'].map(lambda x: 1 if x == 'male' else 0)\n",
    "id": "56124c2d93d08b04",
    "outputs": [],
-   "execution_count": null
+   "execution_count": 7
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-31T18:08:36.880476Z",
+     "start_time": "2025-01-31T18:08:36.864841Z"
+    }
+   },
    "cell_type": "code",
    "source": "training_df['boneage_category'] = pd.cut(training_df['boneage'],10)\n",
    "id": "fffad3d0b80638bb",
    "outputs": [],
-   "execution_count": null
+   "execution_count": 8
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-31T18:08:36.967122Z",
+     "start_time": "2025-01-31T18:08:36.947932Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "boneage_std = 2*training_df['boneage'].std()\n",
@@ -108,35 +272,48 @@
     "print(boneage_std, boneage_mean)"
    ],
    "id": "29f84cd4f6ba374f",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": "training_df['norm_age'] = (training_df['boneage'] - boneage_mean) / boneage_mean\n",
-   "id": "d7a6e8186faa539d",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "82.36404279879265 127.3207517246848\n"
+     ]
+    }
+   ],
+   "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-31T15:58:25.108033Z",
-     "start_time": "2025-01-31T15:58:25.088624Z"
+     "end_time": "2025-01-31T18:08:37.014484Z",
+     "start_time": "2025-01-31T18:08:36.982874Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "training_df['norm_age'] = (training_df['boneage'] - boneage_mean) / boneage_mean\n",
+   "id": "d7a6e8186faa539d",
+   "outputs": [],
+   "execution_count": 10
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-31T18:08:37.045929Z",
+     "start_time": "2025-01-31T18:08:37.030228Z"
     }
    },
    "cell_type": "code",
    "source": "test_df = pd.read_csv('res/boneage-test-dataset.csv')",
    "id": "76920eb7a002b2fd",
    "outputs": [],
-   "execution_count": 18
+   "execution_count": 11
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-31T16:01:20.679944Z",
-     "start_time": "2025-01-31T16:01:20.304865Z"
+     "end_time": "2025-01-31T18:08:37.519184Z",
+     "start_time": "2025-01-31T18:08:37.061674Z"
     }
    },
    "cell_type": "code",
@@ -152,10 +329,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1d138e17190>"
+       "<matplotlib.image.AxesImage at 0x22be4d7ad60>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -170,13 +347,13 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 20
+   "execution_count": 12
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-31T16:25:51.838159Z",
-     "start_time": "2025-01-31T16:25:51.822398Z"
+     "end_time": "2025-01-31T18:08:37.586993Z",
+     "start_time": "2025-01-31T18:08:37.571981Z"
     }
    },
    "cell_type": "code",
@@ -189,13 +366,13 @@
    ],
    "id": "e7315de89a01c4cd",
    "outputs": [],
-   "execution_count": 33
+   "execution_count": 13
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-31T16:23:05.512125Z",
-     "start_time": "2025-01-31T16:23:05.486241Z"
+     "end_time": "2025-01-31T18:08:37.634086Z",
+     "start_time": "2025-01-31T18:08:37.618459Z"
     }
    },
    "cell_type": "code",
@@ -213,13 +390,13 @@
    ],
    "id": "f676f4fe42c580d5",
    "outputs": [],
-   "execution_count": 26
+   "execution_count": 14
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-31T16:23:07.033832Z",
-     "start_time": "2025-01-31T16:23:07.018827Z"
+     "end_time": "2025-01-31T18:08:37.681589Z",
+     "start_time": "2025-01-31T18:08:37.665516Z"
     }
    },
    "cell_type": "code",
@@ -232,19 +409,19 @@
    ],
    "id": "c10835301829d60b",
    "outputs": [],
-   "execution_count": 27
+   "execution_count": 15
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-31T16:24:21.725480Z",
-     "start_time": "2025-01-31T16:24:20.184119Z"
+     "end_time": "2025-01-31T18:08:38.275333Z",
+     "start_time": "2025-01-31T18:08:37.713461Z"
     }
    },
    "cell_type": "code",
    "source": [
     "img_size = (256,256)\n",
-    "batch_size = 128\n",
+    "batch_size = 4\n",
     "\n",
     "train_data = train_generator.flow_from_dataframe(\n",
     "    dataframe=df_train,\n",
@@ -269,13 +446,13 @@
      ]
     }
    ],
-   "execution_count": 30
+   "execution_count": 16
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-31T16:26:01.264966Z",
-     "start_time": "2025-01-31T16:26:01.153673Z"
+     "end_time": "2025-01-31T18:08:38.416954Z",
+     "start_time": "2025-01-31T18:08:38.306689Z"
     }
    },
    "cell_type": "code",
@@ -317,19 +494,22 @@
      ]
     }
    ],
-   "execution_count": 34
+   "execution_count": 17
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-31T18:08:38.617416Z",
+     "start_time": "2025-01-31T18:08:38.448283Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "X_test , y_test = next(test_val_generator.flow_from_dataframe(\n",
     "    dataframe=df_test,\n",
     "    x_col= 'path',\n",
     "    y_col='boneage',\n",
-    "    batch_size=batch_size * 10,\n",
+    "    batch_size=batch_size,\n",
     "    class_mode='other',\n",
     "    flip_vert=True,\n",
     "    color_mode='rgb',\n",
@@ -337,15 +517,99 @@
     "    \n",
     "))"
    ],
-   "id": "4e2e44705b36dd35"
+   "id": "4e2e44705b36dd35",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 1262 validated image filenames.\n"
+     ]
+    }
+   ],
+   "execution_count": 18
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-31T18:08:41.511852Z",
+     "start_time": "2025-01-31T18:08:38.651772Z"
+    }
+   },
    "cell_type": "code",
+   "source": [
+    "# transfer learning : Xception -> fine tuning\n",
+    "model = tf.keras.applications.Xception(input_shape=(256,256,3),\n",
+    "                                       include_top=False,\n",
+    "                                       weights='imagenet')\n",
+    "\n",
+    "model.trainable = True # future extraction"
+   ],
+   "id": "6af26d02a924372a",
    "outputs": [],
-   "execution_count": null,
+   "execution_count": 19
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-31T18:08:41.891718Z",
+     "start_time": "2025-01-31T18:08:41.547152Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "custom_model =  Sequential()\n",
+    "custom_model.add(model)\n",
+    "custom_model.add(GlobalMaxPooling2D())\n",
+    "custom_model.add(Flatten())\n",
+    "custom_model.add(Dense(5))\n",
+    "custom_model.add(Activation('relu'))\n",
+    "custom_model.add(Dense(1, activation='linear'))\n",
+    "\n",
+    "custom_model.compile(loss = 'mse', optimizer = Adam(learning_rate=1e-3) , metrics = ['mse'])\n",
+    "\n",
+    "callback = [EarlyStopping(monitor='val_loss', restore_best_weights=True)]"
+   ],
+   "id": "5b2d1b3f3dc5bedb",
+   "outputs": [],
+   "execution_count": 20
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-31T18:22:00.676824Z",
+     "start_time": "2025-01-31T18:08:41.920227Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "hist = custom_model.fit(train_data,epochs=5,validation_data=valid_data,batch_size=batch_size, callbacks = [callback])",
+   "id": "79b3a40e21e50ab",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5\n",
+      "2522/2522 [==============================] - 417s 163ms/step - loss: 944.0980 - mse: 944.0980 - val_loss: 892.6193 - val_mse: 892.6193\n",
+      "Epoch 2/5\n",
+      "2522/2522 [==============================] - 382s 151ms/step - loss: 598.9641 - mse: 598.9641 - val_loss: 1509.7704 - val_mse: 1509.7704\n"
+     ]
+    }
+   ],
+   "execution_count": 21
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-31T18:22:00.726230Z",
+     "start_time": "2025-01-31T18:22:00.720607Z"
+    }
+   },
+   "cell_type": "code",
    "source": "",
-   "id": "5b2d1b3f3dc5bedb"
+   "id": "727fb4e491836f3d",
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
